[package]
name = "resistance-overwatch"
version = "0.1.0"
edition = "2021"

[dependencies]
resistance-civil-protection = { path = "../resistance-civil-protection/" }
ctrlc = { version = "3.4.5", features = ["termination"] }
log = "0.4.22"
multi_log = "0.1.2"
simplelog = "0.12.2"
syslog = "7.0.0"
url = "2.5.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
notify-rust = "4.11.3"
dotenv = "0.15.0"
